# sample-bedrock-multi-agent-deployment-assistant

./: .gitignore  .semgrep.yml  .semgrepignore  README.md  catalog.lock.yaml  compose.yaml  config.yaml  dev.sh
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.lambda  README.md  entrypoint.sh  pyproject.toml
backend/lambdas/ws/: ws_authorizer.py  ws_connect.py  ws_disconnect.py  ws_heartbeat.py  ws_notification_bridge.py  ws_subscribe.py
backend/src/: main.py
backend/src/agents/: __init__.py  common.py  design.py  documentation.py  iac.py  interview.py  interview_executor.py  interview_planner.py
backend/src/config/: agent_hooks.py  auth.py  aws.py  callback.py  catalog_schema.py  circuit_breaker.py  config_schema.py  guardrails.py  metrics.py  observability.py  settings.py  tool_policies.py
backend/src/models/: __init__.py  design.py  docs.py  iac.py  interview_plan.py  layer_plan.py  project.py  requirements.py  resource_plan.py
backend/src/prompts/: design.txt  docs_diagram.txt  docs_diagram_fix.txt  docs_threat_model.txt  docs_user_guide.txt  iac_architecture_planner.txt  iac_compose.txt  iac_fix.txt  iac_layer_fix.txt  iac_layer_generate.txt  interview_execute.txt  interview_plan.txt  interview_replan.txt  kb_parser.txt  refinement.txt
backend/src/routes/: auth.py  config.py  errors.py  export.py  iac.py  projects.py
backend/src/services/: __init__.py  catalog_loader.py  cfn_assembler.py  design.py  design_processing.py  docs.py  docs_processing.py  export.py  iac.py  iac_processing.py  interview.py  kb_provider.py  layer_merger.py  memory.py  parameter_mapper.py  parameter_resolver.py  plan_cache.py  predefined_layers.py  projects.py  refinement.py  template_resolver.py  ws_manager.py
backend/src/storage/: __init__.py  dynamo_s3.py  local.py  protocol.py
backend/src/tools/: __init__.py  kb_search.py  mermaid_validator.py  save_artifact.py  snippet_discovery.py  template_discovery.py  well_architected.py
backend/src/utils/: cfn_yaml.py  formatting.py  sse.py  validation.py
backend/src/validation/: appliance_rules.guard  cfn_guard.py  cfn_lint_local.py  checkov_local.py  fortigate_rules.guard  models.py  pipeline.py  spec_validator.py  structural.py
backend/src/workers/: design_worker.py  docs_worker.py  iac_worker.py  local_notification_worker.py  local_worker.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_auth.py  test_cfn_assembler.py  test_cfn_assembler_json.py  test_circuit_breaker.py  test_guardrails.py  test_interview_executor.py  test_interview_plan_models.py  test_interview_planner.py  test_interview_service.py  test_kb_search_filtered.py  test_layer_merger.py  test_layer_plan.py  test_local_worker.py  test_models.py  test_observability.py  test_parameter_mapper.py  test_plan_cache.py  test_services.py  test_settings.py  test_spec_validator.py  test_sse_auth_metrics.py  test_storage.py  test_tools.py  test_validation.py  test_ws_lambdas.py
backend/tools/validate-mermaid/: index.mjs  package-lock.json  package.json
docs/: arch.drawio  aws-deployment.md  configuration-guide.md  design-agent-design.md  documentation-agent-design.md  iac-agent-design.md  interview-agent-design.md  knowledge-base-setup-guide.md  local-development.md  system-design-overview.md
frontend/: .env.local  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
generated-diagrams/: ai-lcm.xml  (+1 more)
(+105 files in other folders)
