[project]
name = "backend"
version = "0.1.0"
description = "backend repository for ai-deploy-assist"
requires-python = "~=3.12.0"
dependencies = [
    "boto3>=1.42.48",
    "cfn-lint>=1.44.0",
    "checkov>=3.2.0,<3.2.500",  # >=3.2.500 pins boto3==1.35.49, conflicts with bedrock/strands SDKs
    "fastapi>=0.128.8",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.2",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.4.0",
    "python-dotenv>=1.2.1",
    "slowapi>=0.1.9",
    "strands-agents>=1.26.0",
    "strands-agents-tools>=0.2.20",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pip-audit>=2.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.bandit]
# Per-call suppressions live as `# nosec <RULE>` next to the code.
# This block records the project-wide rationale for audit.
exclude_dirs = ["tests", "knowledge-base", ".venv"]
# B101 (assert): pytest tests legitimately use assert
# B404 (subprocess import): we run cfn-guard, cfn-lint, mermaid validators as subprocesses by design
skips = ["B101", "B404"]
